# kopete-qq

./: CMakeLists.txt  INSTALL  README  js.cpp  js.h  kopete_qq.desktop  kopete_webqq.desktop  qq_types.cpp  qq_types.h  qqaccount.cpp  qqaccount.h  qqaccount.h.autosave  qqbridgecallback.h  qqcontact.cpp  qqprotocol.cpp  translate.cpp  webqqaccount.cpp  webqqchatsession.cpp  webqqcontact.cpp  webqqeditaccountwidget.cpp  webqqgroupchatsession.cpp  webqqgroupchatsession.h  webqqprotocol.h
liblwqq/: CMakeLists.txt
liblwqq/lib/: CMakeLists.txt  async.h  info.c  info.h  internal.h  login.c  lwjs.c  lwjs.h  lwqq-config.h  msg.c  msg.h  type.c  type.h  utility.c  utility.h
liblwqq/src/: cli.c
